--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,10 @@
-@import '~antd/dist/antd.css';
+@import "~antd/dist/antd.css";
 
 .ant-layout {
-    height: 100vh;
+  height: 100vh;
 }
 .ant-layout-sider-children {
-    background-color: #fff;
+  background-color: #fff;
 }
 
 .site-page-header {
@@ -13,23 +13,23 @@
 }
 
 .trigger {
-    padding: 0 24px;
-    font-size: 18px;
-    line-height: 64px;
-    cursor: pointer;
-    transition: color 0.3s;
-  }
-  
-  .trigger:hover {
-    color: #1890ff;
-  }
-  
-  .logo {
-    height: 32px;
-    margin: 16px;
-    background: rgba(255, 255, 255, 0.3);
-  }
-  
-  .site-layout .site-layout-background {
-    background: #fff;
-  }
+  padding: 0 24px;
+  font-size: 18px;
+  line-height: 64px;
+  cursor: pointer;
+  transition: color 0.3s;
+}
+
+.trigger:hover {
+  color: #1890ff;
+}
+
+.logo {
+  height: 32px;
+  margin: 16px;
+  background: rgba(255, 255, 255, 0.3);
+}
+
+.site-layout .site-layout-background {
+  background: #fff;
+}
